objects/ssot__ActionableListMember__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ActionableListId__c</fullName>
        <label>Actionable List</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssignmentStatus__c</fullName>
        <label>Assignment Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Actionable List Member Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordId__c</fullName>
        <label>Reference Record</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceRecordObject__c</fullName>
        <label>Reference Record Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729238100588_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionableListMember_ReferenceRecord_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>ActionableListMember_ReferenceRecord_rel</relationshipLabel>
        <relationshipName>rel_1729238100588_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729238102546_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionableListMember_ActionableListI_rel</label>
        <referenceTo>ssot__ActionableList__dlm</referenceTo>
        <relationshipLabel>ActionableListMember_ActionableListI_rel</relationshipLabel>
        <relationshipName>rel_1729238102546_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1729238104799_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ActionableListMember_ReferenceRecord_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>ActionableListMember_ReferenceRecord_rel</relationshipLabel>
        <relationshipName>rel_1729238104799_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>